AUX_SOURCE_DIRECTORY(. DIR_SRCROOT )
INCLUDE_DIRECTORIES( ../include )
#ADD_LIBRARY( ini SHARED ${DIR_SRCROOT} )
ADD_LIBRARY( ini STATIC ${DIR_SRCROOT} )
TARGET_LINK_LIBRARIES( ini )

INSTALL(TARGETS ini
				RUNTIME DESTINATION bin
				LIBRARY DESTINATION lib
				ARCHIVE DESTINATION libstatic
	   )
